src/objects/Picklist_Values__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isNewRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNewRecord</label>
        <type>Checkbox</type>
    </fields>
    <label>Picklist Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>